Revert dockerfile because 2.8 and http/3 still has some issues with lua

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -47,9 +47,9 @@ frontend http-in
 
 	# Clearnet http (you'll have to figure out https yourself)
 	bind *:80
-	bind *:443 ssl crt /etc/haproxy/certs/haproxy.pem alpn h3,h2,http/1.1
-	bind quic4@*:443 ssl crt /etc/haproxy/certs/haproxy.pem
-	http-response set-header alt-svc "h3=\":443\";ma=900;"
+	# bind *:443 ssl crt /etc/haproxy/certs/haproxy.pem alpn h3,h2,http/1.1
+	# bind quic4@*:443 ssl crt /etc/haproxy/certs/haproxy.pem
+	# http-response set-header alt-svc "h3=\":443\";ma=900;"
 
 	# Or instead, for Tor, to use circuit IDs as "IP":
 	#bind 127.0.0.1:80 accept-proxy
@@ -74,8 +74,8 @@ frontend http-in
 
 	# ratelimit (and for tor, kill circuit) on POST bot-check. legitimate users shouldn't hit this.
 	http-request track-sc0 src table bot_check_post_throttle if { path /.basedflare/bot-check } { method POST }
-	http-request lua.kill-tor-circuit if { sc_http_req_rate(0) gt 1 }
-	http-request tarpit if { sc_http_req_rate(0) gt 1 }
+	# http-request lua.kill-tor-circuit if { sc_http_req_rate(0) gt 1 }
+	# http-request tarpit if { sc_http_req_rate(0) gt 1 }
 
 	# acl for lua check whitelisted IPs/subnets and some excluded paths
 	acl is_excluded src,map_ip(/etc/haproxy/map/whitelist.map) -m found
