Bugfix to declaration of crawler whitelist map, reduce difficulty for testing

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -79,8 +79,8 @@ frontend http-in
 
 	# acl for lua check whitelisted IPs/subnets and some excluded paths
 	acl is_excluded src,map_ip(/etc/haproxy/map/whitelist.map) -m found
-	# acl is_excluded src -m found -f /etc/haproxy/map/crawler-whitelist.map
-	# acl is_excluded path /favicon.ico /.basedflare/pow-icon #add more
+	acl is_excluded src -f /etc/haproxy/map/crawler-whitelist.map
+	acl is_excluded path /favicon.ico /.basedflare/pow-icon #add more
 
 	# acl ORs for when ddos_mode_enabled
 	acl ddos_mode_enabled_override str("true"),map(/etc/haproxy/map/ddos_global.map) -m found
