Test with updated dataplaneapi for map fix and exclusing backends in sync, change to .yml, and empty backends map

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,12 @@ services:
       - 443:80
       - 2001:2001 #dataplaneapi
     build:
+      # no_cache: true
       context: ./
       dockerfile: haproxy/Dockerfile
     volumes:
       - ./haproxy/haproxy.cfg:/etc/haproxy/haproxy.cfg
-      - ./haproxy/dataplaneapi.hcl:/etc/haproxy/dataplaneapi.hcl
+      #- ./haproxy/dataplaneapi.yml:/etc/haproxy/dataplaneapi.yml
       - ./haproxy/errors/:/etc/haproxy/errors/
       - ./haproxy/map/:/etc/haproxy/map/
       - ./haproxy/template/:/etc/haproxy/template/
@@ -20,6 +21,7 @@ services:
       - ./src/lua/libs/:/etc/haproxy/libs/
       - ./src/js/:/etc/haproxy/js/
       - ./src/locales/:/etc/haproxy/locales/
+      - ../../Documents/dataplaneapi/build/dataplaneapi:/usr/local/bin/dataplaneapi
     environment:
       # These are the hcaptcha and recaptcha test keys, not leaking any dont worry :^)
       - HCAPTCHA_SITEKEY=20000000-ffff-ffff-ffff-000000000002
