--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -28,7 +28,7 @@ defaults
 	http-error status 504 content-type "text/html; charset=utf-8" lf-file /etc/haproxy/errors/504.http
 
 program api
-	command dataplaneapi -f /etc/haproxy/dataplaneapi.hcl --update-map-files
+	command dataplaneapi -f /etc/haproxy/dataplaneapi.yml --update-map-files
 	no option start-on-reload
 
 frontend stats-frontend
