--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,6 +1,6 @@
 global
 	daemon
-	maxconn 256
+	maxconn "${HAPROXY_MAXCONN}"
 	log stdout  format raw  local0  debug
 	lua-load /etc/haproxy/scripts/register-servers.lua
 	lua-load-per-thread /etc/haproxy/scripts/register-bot-check.lua
@@ -158,7 +158,7 @@ frontend http-in
 	default_backend servers
 
 cache basic_cache
-	total-max-size 250
+	total-max-size "${HAPROXY_CACHE_MB}"
 	max-object-size 31457280
 	max-age 86400
 	process-vary on
