add missing global configs for master-worker mode and crt base

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,5 +1,8 @@
 global
 	daemon
+	ca-base /etc/ssl/certs
+	crt-base /etc/ssl/private
+	master-worker
 	maxconn "${HAPROXY_MAXCONN}"
 	log stdout  format raw  local0  debug
 	lua-load /etc/haproxy/scripts/register-servers.lua
@@ -13,6 +16,7 @@ global
 defaults
 	log global
 	mode http
+	option dontlognull
 	option httplog
 	timeout connect 5000ms
 	timeout client 50000ms
@@ -168,11 +172,6 @@ cache basic_cache
 
 backend servers
 	balance leastconn
-
-	# old method, only supports single backend per host/domain
-	#use-server %[req.hdr(host),lower,map(/etc/haproxy/map/backends.map)] if TRUE
-
-	# new method, load balance to multiple servers with lua
 	use-server %[lua.get_server_names] if TRUE
 
 backend bot_check_post_throttle
