Add an optional USE_INTER_FONT to insert inter css tags and extra css for font Separate css out into variable to template into body template with first stage template compile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - POW_DIFFICULTY=20
       - POW_TYPE=argon2
       - TOR_CONTROL_PORT_PASSWORD=changeme
+      - USE_INTER_FONT=1
 
   nginx:
     ports:
