--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -142,10 +142,6 @@ frontend http-in
 	#http-request lua.set-lang-json
 	#http-request return lf-file /etc/haproxy/template/maintenance.html status 200 content-type "text/html; charset=utf-8" hdr "Cache-Control" "private, max-age=30" if maintenance_mode
 
-	# X-Cache-Status header (may be sent in some non-cache responses because NOSRV can happen for other reasons, but should always be present in responses served by cache-use)
-	http-response set-header X-Cache-Status HIT if !{ srv_id -m found }
-	http-response set-header X-Cache-Status MISS if { srv_id -m found }
-
 	# simple example cache for files
 	http-request set-var(txn.path) path
 	acl can_cache var(txn.path) -i -m end .png .jpg .jpeg .jpe .ico .webmanifest .xml .apng .bmp .webp .pjpeg .jfif .gif .mp4 .webm .mov .mkv .svg .m4a .aac .flac .mp3 .ogg .wav .opus .txt .pdf .sid
@@ -156,24 +152,17 @@ frontend http-in
 	http-response set-header X-User-CN %[var(txn.xcn)]
 	http-response set-header Alt-Svc %[var(txn.xcn),map(/etc/haproxy/map/alt-svc.map)] if !match_server_continent
 
-	# header checks for no caching
-	# acl auth_cookie_set res.hdr(Set-Cookie),lower -m found
-	# acl cache_control_max_age_0 res.fhdr(Cache-Control,0) -m sub "max-age=0"
-	# acl cache_control_max_age_0 res.fhdr(Cache-Control,1) -m sub "max-age=0"
-	# acl cache_control_max_age_0 res.fhdr(Cache-Control,2) -m sub "max-age=0"
-
-	# basic caching
-	# http-response set-header Cache-Control no-cache if auth_cookie_set
-	# http-response cache-store basic_cache if !auth_cookie_set !cache_control_max_age_0
-	# http-request cache-use basic_cache
-	
+	# varnish caching if available
+	acl varnish_available nbsrv(varnish) gt 0
+	use_backend varnish if varnish_available
 	default_backend servers
 
-cache basic_cache
-	total-max-size "${HAPROXY_CACHE_MB}"
-	max-object-size 31457280
-	max-age 86400
-	process-vary on
+frontend varnish-to-haproxy-internal
+	bind 127.0.0.1:8080 user root mode 666
+	default_backend servers
+
+backend varnish
+	server CACHE 127.0.0.1:8083 check observe layer7 inter 1s
 
 backend servers
 	balance leastconn
