server name typo

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -149,15 +149,15 @@ frontend http-in
 	http-response set-header Alt-Svc %[var(txn.xcn),map(/etc/haproxy/map/alt-svc.map)] if !match_server_continent
 
 	# varnish caching if available
-	acl varnish_available nbsrv(haproy-to-varnish-cache) gt 0
-	use_backend haproy-to-varnish-cache if varnish_available
+	acl varnish_available nbsrv(haproxy-to-varnish-cache) gt 0
+	use_backend haproxy-to-varnish-cache if varnish_available
 	default_backend servers
 
 frontend varnish-to-haproxy-internal
 	bind unix@/shared-sockets/varnish-to-haproxy-internal.sock user root mode 666
 	default_backend servers
 
-backend haproy-to-varnish-cache
+backend haproxy-to-varnish-cache
 	server CACHE unix@/shared-sockets/haproxy-to-varnish-cache.sock check observe layer7 inter 1s
 
 backend servers
