Clean up some sockets locations Remove vcl_init for secret initialisation

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -57,7 +57,7 @@ frontend http-in
 
 	# Or instead, for Tor, to use circuit IDs as "IP":
 	#bind 127.0.0.1:80 accept-proxy
-	#option forwardfor
+	option forwardfor
 
 	# optional geoip handling (maps required) and alt-svc header addition
 	http-request set-var(req.xcc) src,map_ip(/etc/haproxy/map/geoip.map)
@@ -158,7 +158,7 @@ frontend varnish-to-haproxy-internal
 	default_backend servers
 
 backend haproxy-to-varnish-cache
-	server CACHE unix@/shared-sockets/haproxy-to-varnish-cache.sock check observe layer7 inter 1s
+	server varnish unix@/shared-sockets/haproxy-to-varnish-cache.sock check observe layer7 inter 1s
 
 backend servers
 	balance leastconn
