Remove redundant and fix forwarded IP in varnish config Skip unnecessary methods in haproxy instead of giving extra work to varnish (kept the check in vcl)

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -150,7 +150,8 @@ frontend http-in
 
 	# varnish caching if available
 	acl varnish_available nbsrv(haproxy-to-varnish-cache) gt 0
-	use_backend haproxy-to-varnish-cache if varnish_available
+	acl is_varnish_methods method GET HEAD PURGE BAN
+	use_backend haproxy-to-varnish-cache if varnish_available is_varnish_methods
 	default_backend servers
 
 frontend varnish-to-haproxy-internal
